--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-torch>=1.0.0
+torch>=0.4.1
 gensim>=3.4.0
 pytest>=3.6.4
 tqdm>=4.26.0
@@ -12,3 +12,6 @@ hyperopt>=0.1.1
 pytorch-pretrained-bert>=0.6.1
 bpemb>=0.2.9
 regex==2018.1.10
+pytest
+pytest-cov
+coveralls
