--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,5 @@ script:
   - pip freeze
   - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then pytest --runintegration; fi'
   - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then pytest; fi'
-  - npm run coveralls
+ after_success:
+  - coveralls
