--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ script:
   - pip freeze
   - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then pytest --runintegration; fi'
   - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then pytest; fi'
+  - pytest --cov=flair/
  after_success:
   - coveralls
