--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 before_script: cd tests
 script:
   - pip freeze
-  - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then pytest --runintegration; fi'
-  - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then pytest; fi'
+  - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then pytest --runintegration --cov=flair/; fi'
+  - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then pytest --cov=flair/; fi'
 after_success:
   - coveralls
